# Design-Patterns

./: CMakeLists.txt  README.md  abstract_factory.h  bridge.h  builder.h  factory.h  lazy_singleton.h  main.cpp  prototype.h  proxy.h  simple_factory.h  strategy.h
